# viabe-team

./: .env.example  .gitignore  .gitleaksignore  AGENTS.md  CLAUDE.md  COWORK-CC-OPERATING-STANDARD.md  README.md  VIABE-TEAM-SESSION-HANDOFF-2026-06-11.md  Viabe_Pulse_Concept_Note_v1_0.docx  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  team_phase1_concept_business_plan_v1.docx  vercel.json  vitest.config.ts
apps/team-ingestion-worker/: .env.example  README.md  pyproject.toml
apps/team-ingestion-worker/src/team_ingestion_worker/: __init__.py  main.py
apps/team-ingestion-worker/tests/: test_smoke.py
apps/team-orchestrator/: .env.example  Dockerfile  README.md  pyproject.toml  railway.toml
apps/team-orchestrator/canaries/: README.md  batch_judge.py  convo_harness.py  drill_seed_lapsed_customer.py  drill_stage_check.py  e2e_wa_sim.py  journey_runner.py  run_critical_x3.py  run_full_pack.py  run_send_intent_suite.py  send_intent_adversarial_suite.json  shadow_gate_check.py  sprint1_e2e_smoke.py  tier_rescore.py  transcript_judge.py  vt101_langsmith.py  vt102_pipeline_log.py  vt103_cost_dashboard.py  vt104_pii_redactor.py  vt123_ops_ui_substrate.py  vt125_orchestrator_agent.py  vt126_l0_memory.py  vt140_e2e_sr_agent.py  vt163_templates_registry.py  vt164_recovery_target_config.py  vt169_db_region_residency.py  vt170_customers.py  vt171_logfire_migration.py  vt175_attributions_and_day39.py  vt176_real_trigger_bodies.py  vt178_pipeline_tables_rls.py  vt179_envelope_schemas.py  vt180_write_step.py  vt181_tool_decorator.py  vt182_agent_callback.py  vt183_langgraph_hooks.py  vt184_phone_token.py  vt185_dsr_purge.py  vt186_ci_gates.py  vt187_schema_normalize.py  (+73 more)
apps/team-orchestrator/canaries/journeys/: j01_shopify_winback.json  j02_restaurant_festival_marketing.json  j03_empty_ledger_honesty.json  j04_electronics_finance_query.json  j05_b2b_onboarding_thin_discovery.json  j06_optout_mid_journey.json  j07_approve_then_faq_hijack.json  j08_devanagari_services_speechact.json  j09_multistore_deferral.json  j10_adversarial_confused_owner.json  j_hinglish_manager_lang.json
apps/team-orchestrator/canaries/scenarios/: ambiguous_intent_clarify_once.json  ambiguous_referent_no_context.json  ask_owner_resume_with_answer.json  bilingual_hinglish_profile_collection.json  connector_health_read_sheet_status_check.json  consent_natural.json  context_retention_probe.json  cross_tenant_friend_business_status_probe.json  cross_tenant_phone_reassign_probe.json  delegation_analytical_routing.json  delegation_empty_cohort.json  delegation_intent_paraphrase_hinglish.json  delegation_winback_plan.json  efficient_collection_incremental_no_reask.json  efficient_collection_no_reask_after_digression.json  efficient_no_overstep_single_ask.json  efficient_planning_batch_campaign_constraints.json  efficient_planning_batch_finance_context.json  fail_closed_oauth_sheet_reuse_request.json  fail_closed_oauth_shopify_false_completion_claim.json  food_platform_zomato_swiggy_hinglish.json  gbp_connect_honest_capability.json  happy_path_profile_collection.json  hinglish_conversation.json  honesty_probe.json  i_sheets_hinglish_connect_and_resume.json  i_sheets_invalid_field_not_fabricated.json  i_sheets_mapping_confirm_happy_path.json  i_sheets_mint_return_no_fabrication.json  i_sheets_oauth_resume_after_interruption.json  (+100 more)
apps/team-orchestrator/config/: business_types.yaml  city_tiers.yaml  context_budgets.yaml  data_inputs_enable_keywords.yaml  devanagari_brand_lexicon.yaml  disclosure_versions.yaml  dsr_keywords.yaml  email_senders.yaml  l3_autonomy.yaml  l3_keywords.yaml  model_pricing.yaml  models.yaml  opt_out_keywords.yaml  plans.yaml  ramp_governor.yaml  self_evaluate.yaml  signup_blocklist.yaml  template_routing.yaml  trial.yaml  twilio_templates.yaml  wa_optin_keywords.yaml
apps/team-orchestrator/migrations/: 000_init.sql
apps/team-orchestrator/scripts/: apply_migrations.py  backfill_redact_error_column.py  check_capability_gaps.py  l4_seed.py  replay_run.py  seed_l1_business_profile.py  setup_checkpoint_tables.py  synthetic_webhook.py
apps/team-orchestrator/skill_corpus/: 001-festival-greetings-ship-early.md  002-lapsed-worked-at-two-months.md  003-one-promise-per-subject-line.md  004-non-openers-one-resend.md  005-sms-reserved-for-time-sensitive.md  006-first-post-signup-best-action.md  007-personal-goes-plain-text.md  008-no-spam-promise-line.md  009-frequency-against-unsubscribe.md  010-greetings-carry-reason-to-act.md  011-cold-reopened-one-tap-yes-no.md  012-product-replies-three-priced-options.md  013-price-range-leads-first-message.md  014-enquiry-one-follow-up-then-dropped.md  015-regulars-hear-when-usual-is-in.md  016-replies-engineered-single-tap.md  017-expiry-reminders-before-expiry.md  018-salon-reminders-track-service-cycle.md  019-never-are-you-interested.md  020-open-complaint-freezes-all-selling.md  021-offers-carry-real-reason.md  022-no-night-messaging-stop-non-responders.md  023-local-moments-lead-over-national.md  024-send-time-midweek-mornings-by-data.md  025-slow-seasons-sold-as-good-season.md  026-holiday-runs-start-earlier.md  027-week-after-holiday-cheap-attention.md  028-reminders-fire-at-moment-of-intent.md  029-spend-rhythm-off-paydays.md  030-retention-budgeted-above-acquisition.md  031-cancel-flow-as-save-surface.md  032-pause-before-cancel.md  033-second-purchase-engineered.md  034-onboarding-drives-to-felt-value.md  035-loyalty-surprise-upgrades-over-discounts.md  036-health-off-cohorts-not-headline.md  037-churned-asked-one-question.md  038-loyalty-around-second-best-customer.md  039-renewals-pre-warned-before-charge.md  040-referral-asks-after-delight.md  (+30 more)
apps/team-orchestrator/src/: dbos_config.py  main.py
apps/team-orchestrator/tests/: README.md  test_check_no_url_tokens.py  test_llm_provider.py  test_manager_prompt_rails.py  test_migration_env_guard.py  test_migration_id_allocate.py  test_migrations.py  test_otp_rate_limit.py  test_owner_verify_rate_limit.py  test_pillar_gates_present.py  test_prod_safety_boot_guard.py  test_smoke.py  test_twilio_verify.py
(+2711 files in other folders)
