[project]
name = "team-ingestion-worker"
version = "0.1.0"
description = "Viabe Team ingestion worker — Apify-based heavy ingestion"
requires-python = ">=3.12"
dependencies = [
    "apify-client",
    "anthropic",
    "sarvam-ai-client",
    "pydantic",
]

[dependency-groups]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/team_ingestion_worker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
