[project]
name = "team-ingestion-worker"
version = "0.1.0"
description = "Viabe Team ingestion worker — Apify-based heavy ingestion"
requires-python = ">=3.12"
dependencies = [
    "apify-client",
    "anthropic",
    "sarvamai==0.1.28",
    "pydantic",
]

[dependency-groups]
dev = ["pytest", "ruff", "mypy>=1.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/team_ingestion_worker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
# mypy --strict is non-blocking (CL-83); ignore missing third-party stubs.
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
