[project]
name = "team-orchestrator"
version = "0.1.0"
description = "Viabe Team orchestrator — durable multi-agent workflows"
requires-python = ">=3.12"
dependencies = [
    "dbos>=2.0",
    "langgraph>=0.3",
    "langgraph-supervisor",
    "langgraph-checkpoint-postgres",
    "anthropic",
    "pydantic",
    "supabase",
    "pgvector",
    "psycopg[binary]",
    "psycopg-pool",
    "pyyaml",
    "fastapi",
    "uvicorn[standard]",
    "twilio",
]

[dependency-groups]
dev = ["pytest", "ruff", "httpx", "mypy>=1.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/team_orchestrator", "src/orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
# Heavy deps (dbos, langgraph, langgraph_supervisor, supabase, pgvector) ship
# no type stubs — ignore missing imports so the baseline reflects our code,
# not third-party stub gaps. mypy --strict is non-blocking (CL-83).
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
