[project]
name = "team-orchestrator"
version = "0.1.0"
description = "Viabe Team orchestrator — durable multi-agent workflows"
requires-python = ">=3.12"
dependencies = [
    "dbos>=2.0",
    # langgraph / langchain-* pinned with == (VT-3.9 / CL-147): the
    # orchestrator-agent's model behaviour is version-sensitive — bumps are
    # Type 2 governance.
    "langgraph==1.2.0",
    "langchain==1.3.1",
    "langchain-core==1.4.0",
    "langchain-anthropic==1.4.3",
    "langgraph-checkpoint-postgres",
    # anthropic pinned == (VT-32 / CL-242): the sales_recovery agent loop
    # is written directly on the Messages API; behaviour-sensitive surfaces
    # (extended thinking, usage shape, tool_use stop_reason) make bumps
    # Type 2 governance. The dep was previously unpinned (dep-audit
    # 2026-05-18 finding); pinning the previously-unpinned baseline here.
    "anthropic==0.103.1",
    "pydantic",
    "supabase",
    "pgvector",
    "psycopg[binary]",
    "psycopg-pool",
    "pyyaml",
    "fastapi",
    "uvicorn[standard]",
    "twilio",
]

[dependency-groups]
dev = ["pytest", "ruff", "httpx", "mypy>=1.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/team_orchestrator", "src/orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
# Heavy deps (dbos, langgraph, langchain, supabase, pgvector) ship
# no type stubs — ignore missing imports so the baseline reflects our code,
# not third-party stub gaps. mypy --strict is non-blocking (CL-83).
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
