[project]
name = "team-orchestrator"
version = "0.1.0"
description = "Viabe Team orchestrator — durable multi-agent workflows"
requires-python = ">=3.12"
dependencies = [
    # VT-39: MCP tool-contract framework lives in team-shared. The
    # orchestrator imports MCPTool / ToolContext / ToolResult /
    # PipelineStepsTelemetry from there. Path dependency keeps the
    # framework testable in isolation from the orchestrator.
    "team-shared",
    "dbos>=2.0",
    # langgraph / langchain-* pinned with == (VT-3.9 / CL-147): the
    # orchestrator-agent's model behaviour is version-sensitive — bumps are
    # Type 2 governance.
    "langgraph==1.2.0",
    "langchain==1.3.1",
    "langchain-core==1.4.0",
    "langchain-anthropic==1.4.3",
    # VT-619b multi-provider: GPT-5.6 support via the OpenAI Responses API. Pinned
    # == exact like langchain-anthropic/anthropic above — the ChatOpenAI Responses
    # kwarg surface (use_responses_api, service_tier, reasoning effort) is
    # behaviour-sensitive, so bumps are Type 2 governance (VT-3.9 / CL-147).
    "langchain-openai==1.2.2",
    "openai==2.45.0",
    # VT (multi-provider): Google Gemini 3.5/3.1 support via langchain-google-genai's
    # ChatGoogleGenerativeAI. Pinned == exact like langchain-anthropic/langchain-openai
    # above — the ctor kwarg surface (max_output_tokens, temperature) and the
    # usage_metadata shape are behaviour-sensitive, so bumps are Type 2 governance
    # (VT-3.9 / CL-147). 4.2.5 is the highest release compatible with the langchain-core
    # ==1.4.0 pin (4.2.6+ requires langchain-core>=1.4.7).
    "langchain-google-genai==4.2.5",
    "langgraph-checkpoint-postgres",
    # VT-101: LangSmith tracing. Pin == band rather than == exact because the
    # SDK is observability-only — a minor bump cannot change orchestrator
    # behaviour (tracing failures are swallowed by design).
    # anthropic pinned == (VT-32 / CL-242): the sales_recovery agent loop
    # is written directly on the Messages API; behaviour-sensitive surfaces
    # (extended thinking, usage shape, tool_use stop_reason) make bumps
    # Type 2 governance. The dep was previously unpinned (dep-audit
    # 2026-05-18 finding); pinning the previously-unpinned baseline here.
    "anthropic==0.103.1",
    "pydantic",
    "supabase",
    "pgvector",
    # VT-70 — L4 skill-corpus embeddings (voyage-4-lite, vector(1024)). The
    # first production embedding call (L1 took caller-supplied vectors; the SDK
    # was previously test-only via importorskip). Required for L4 retrieval.
    "voyageai>=0.3",
    "psycopg[binary]",
    "psycopg-pool",
    "pyyaml",
    "fastapi",
    "uvicorn[standard]",
    "twilio",
    # VT-198 — emoji-only-body detection uses \\p{Extended_Pictographic}
    # which stdlib `re` does not support; PyPI `regex` package backs the
    # is_emoji_only_body() classifier in orchestrator/feedback/.
    "regex>=2024.0.0",
    "logfire>=4.0,<5",
    # VT-191 — Fernet encryption-at-rest for phone numbers in
    # phone_token_resolutions. Closes the VT-184 Phase-1 plaintext
    # loophole (Cond 1 follow-up).
    "cryptography>=44.0.0",
    # VT-123 — verify HS256 operator-claim JWTs signed by team-web
    # (lib/auth/operator-jwt.ts) for the resolve-phone decrypt proxy.
    "pyjwt>=2.10.0",
    # VT-207 — Google Sheets connector. OAuth client (Authlib's
    # google-auth-oauthlib for the auth-code exchange) + Sheets v4
    # client for sample + full pulls.
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.140.0",
    # VT-86 — monthly impact report PDF rendering. weasyprint renders the
    # HTML+CSS report to PDF with proper Hindi/Devanagari text-shaping (pango).
    # Needs cairo/pango/gdk-pixbuf system libs (see apps/team-orchestrator/
    # Dockerfile); imported lazily so dev machines without those libs still
    # load the module (the PDF-bytes path is canary/Docker-verified).
    "weasyprint>=63.0",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
    # VT-424 — Razorpay Python SDK for the live razorpay.subscription.create. Imported LAZILY
    # (inside _get_razorpay_client) so the orchestrator still loads dep-less; tests inject a stub
    # client and never import this. The LIVE keys/plan-IDs remain NEEDS-FAZAL.
    "razorpay>=1.4.2",
]

[dependency-groups]
dev = ["pytest", "ruff", "httpx", "mypy>=1.14"]

[tool.uv.sources]
team-shared = { path = "../../packages/team-shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/team_orchestrator", "src/orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
# Heavy deps (dbos, langgraph, langchain, supabase, pgvector) ship
# no type stubs — ignore missing imports so the baseline reflects our code,
# not third-party stub gaps. mypy --strict is non-blocking (CL-83).
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
